<resources>
    <string name="app_name">OjekOnline</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="hp">Hp</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="don_t_have_account_sign_up">Don\'t Have Account ? Sign Up</string>
    <string name="input_nomor_hp">Input Nomor HP</string>
    <string name="submit">Submit</string>
    <string name="ojek_online">Ojek Online</string>
    <string name="home">Home</string>
    <string name="history">HIstory</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dari_mana">Dari Mana ?</string>
    <string name="mau_kemana">Mau Kemana ?</string>
    <string name="harga">Harga</string>
    <string name="rp_50_000">Rp. 50.000</string>
    <string name="estimasi_waktu">Estimasi Waktu</string>
    <string name="_3_menit">3 Menit</string>
    <string name="pesan">Pesan</string>
    <string name="title_activity_maps">Map</string>
    <string name="serpong_tanggerang">Serpong, Tanggerang</string>
    <string name="_nama">Rivanda M</string>
    <string name="namaaku">Rivanda</string>
    <string name="emailku">mahdiyansyahr@gmail.com</string>
    <string name="hpku">08996366785</string>
    <string name="sign_out">Sign Out</string>
</resources>
