<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center|bottom"
            android:scaleType="fitXY"
            android:src="@drawable/profile" />

    </FrameLayout>

    <TextView
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frame"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/_nama"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/profilename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullname"
        android:layout_marginLeft="40dp"
        android:text="@string/namaaku" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/profilename"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/fullemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view1"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/profileemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullemail"
        android:layout_marginLeft="40dp"
        android:text="@string/emailku" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/profileemail"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/fullhp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view2"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/hp"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/profilehp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fullhp"
        android:layout_marginLeft="40dp"
        android:text="@string/hpku" />

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/profilehp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/profilesignout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/view3"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:background="@color/colorPrimary"
        android:text="@string/sign_out"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</RelativeLayout>